<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weather Viewer</string>
    <string name="add_new_city">Add City</string>
    <string name="temperature_label_string">Temperature:&#160;</string>
    <string name="feels_like_label_string">Feels like:&#160;</string>
    <string name="humidity_label_string">Humidity:&#160;</string>
    <string name="percip_chance_label_string">Chance of Precipitation:&#160;</string>
    <string name="weather_image_description">Weather Picture</string>
    <string name="click_widget_message">Click to launch WeatherView app</string>

    <string name="add_city_dialog_title">Add City</string>
    <string name="zipcode_prompt">Please Enter a Zip Code:</string>
    <string name="add_city_checkbox_text">Set as preferred City</string>
    <string name="add_city_button_text">Add City</string>
    <string name="add_city_dialog_bundle_key">dialog_bundle_key</string>
    
    <string name="city_dialog_preferred">Set Preferred</string>
    <string name="city_dialog_delete">Delete</string>
    <string name="city_dialog_cancel">Cancel</string>
    <string name="city_dialog_message_prefix">Perform which action on&#160;</string>
    <string name="city_dialog_message_postfix">\?</string>
    <string name="last_city_warning">Cannot delete the last city.</string>
    <string name="default_zip">02115</string>
    
    <string name="zipcode">ZIP code:&#160;</string>
    
    <string name="duplicate_zip_error">Duplicate Zip Code.</string>
    <string name="invalid_zip_error">Invalid Zip Code</string>
    
    <!--  URL: http://free.worldweatheronline.com/feed/weather.ashx?q=80027&format=json&num_of_days=5&key=eeef0ec78d141921132301  -->
    <string name="location_url_pre_zipcode">http://i.wxbug.net/REST/Direct/GetLocation.ashx?zip=</string>
    <string name="weather_url_prefix">http://free.worldweatheronline.com/feed/weather.ashx?q=</string>
    <string name="weatherbug_api_key">eeef0ec78d141921132301</string>
    
    <string name="js_current">current_condition</string>
    <string name="js_temp">temp_F</string>
    <string name="js_feels">temp_C</string>
    <string name="js_humid">humidity</string>
    <string name="js_precip">precipMM</string>
    <string name="js_image">weatherIconUrl</string>
    <string name="js_desc">weatherDesc</string>
    <string name="js_value">value</string>
    <string name="js_date">date</string>
    <string name="js_high_temp">tempMaxF</string>
    <string name="js_low_temp">tempMinF</string>
    
    <string name="location">location</string>
    <string name="city">city</string>
    <string name="state">state</string>
    <string name="country">country</string>
    <string name="loading_message">Loading Forecast&#8230;</string>
    <string name="current_conditions">Current Conditions</string>
    <string name="five_day_forecast">Five Day Forecast</string>
  
    <string name="null_data_toast">No weather information was found for this location</string>
    <string name="temp_unit">F</string>
    
   <string name="high_temperature_label_string">High:&#160;</string>
   <string name="low_temperature_label_string">Low:&#160;</string>
   
   <string name="zip_extra">zip_extra</string>

</resources>

<!--
{
   "data":{
      "current_condition":[
         {
            "cloudcover":"0",
            "humidity":"34",
            "observation_time":"12:06 AM",
            "precipMM":"0.0",
            "pressure":"1018",
            "temp_C":"10",
            "temp_F":"50",
            "visibility":"16",
            "weatherCode":"113",
            "weatherDesc":[
               {
                  "value":"Sunny"
               }
            ],
            "weatherIconUrl":[
               {
                  "value":"http:\/\/www.worldweatheronline.com\/images\/wsymbols01_png_64\/wsymbol_0001_sunny.png"
               }
            ],
            "winddir16Point":"N",
            "winddirDegree":"0",
            "windspeedKmph":"0",
            "windspeedMiles":"0"
         }
      ],
      "request":[
         {
            "query":"80027",
            "type":"Zipcode"
         }
      ],
      "weather":[
         {
            "date":"2013-01-25",
            "precipMM":"0.0",
            "tempMaxC":"13",
            "tempMaxF":"55",
            "tempMinC":"0",
            "tempMinF":"32",
            "weatherCode":"113",
            "weatherDesc":[
               {
                  "value":"Sunny"
               }
            ],
            "weatherIconUrl":[
               {
                  "value":"http:\/\/www.worldweatheronline.com\/images\/wsymbols01_png_64\/wsymbol_0001_sunny.png"
               }
            ],
            "winddir16Point":"SSE",
            "winddirDegree":"153",
            "winddirection":"SSE",
            "windspeedKmph":"12",
            "windspeedMiles":"7"
         },
         {
            "date":"2013-01-26",
            "precipMM":"0.0",
            "tempMaxC":"12",
            "tempMaxF":"53",
            "tempMinC":"4",
            "tempMinF":"38",
            "weatherCode":"113",
            "weatherDesc":[
               {
                  "value":"Sunny"
               }
            ],
            "weatherIconUrl":[
               {
                  "value":"http:\/\/www.worldweatheronline.com\/images\/wsymbols01_png_64\/wsymbol_0001_sunny.png"
               }
            ],
            "winddir16Point":"SSE",
            "winddirDegree":"159",
            "winddirection":"SSE",
            "windspeedKmph":"12",
            "windspeedMiles":"7"
         },
         {
            "date":"2013-01-27",
            "precipMM":"0.1",
            "tempMaxC":"12",
            "tempMaxF":"54",
            "tempMinC":"0",
            "tempMinF":"33",
            "weatherCode":"113",
            "weatherDesc":[
               {
                  "value":"Sunny"
               }
            ],
            "weatherIconUrl":[
               {
                  "value":"http:\/\/www.worldweatheronline.com\/images\/wsymbols01_png_64\/wsymbol_0001_sunny.png"
               }
            ],
            "winddir16Point":"WSW",
            "winddirDegree":"255",
            "winddirection":"WSW",
            "windspeedKmph":"10",
            "windspeedMiles":"6"
         },
         {
            "date":"2013-01-28",
            "precipMM":"2.9",
            "tempMaxC":"5",
            "tempMaxF":"42",
            "tempMinC":"1",
            "tempMinF":"33",
            "weatherCode":"116",
            "weatherDesc":[
               {
                  "value":"Partly Cloudy"
               }
            ],
            "weatherIconUrl":[
               {
                  "value":"http:\/\/www.worldweatheronline.com\/images\/wsymbols01_png_64\/wsymbol_0002_sunny_intervals.png"
               }
            ],
            "winddir16Point":"E",
            "winddirDegree":"100",
            "winddirection":"E",
            "windspeedKmph":"14",
            "windspeedMiles":"9"
         },
         {
            "date":"2013-01-29",
            "precipMM":"12.3",
            "tempMaxC":"1",
            "tempMaxF":"33",
            "tempMinC":"-13",
            "tempMinF":"8",
            "weatherCode":"335",
            "weatherDesc":[
               {
                  "value":"Patchy heavy snow"
               }
            ],
            "weatherIconUrl":[
               {
                  "value":"http:\/\/www.worldweatheronline.com\/images\/wsymbols01_png_64\/wsymbol_0012_heavy_snow_showers.png"
               }
            ],
            "winddir16Point":"NE",
            "winddirDegree":"46",
            "winddirection":"NE",
            "windspeedKmph":"19",
            "windspeedMiles":"12"
         }
      ]
   }
}  
 -->